[profile.release]
#lto = "fat"
#codegen-units = 1
#opt-level = 3

[workspace]
resolver = "2"
members = [
    "src/common",
    "src/contract-test-server",
    "src/demo",
    "src/events-gen",
    "src/metadata",
    "src/platform",
    "src/query",
    "src/service",
    "src/store",
    "src/ttest",
    "src/test_util"
]
