[profile.release]
#lto = "fat"
#codegen-units = 1
#opt-level = 3

[workspace]
resolver = "2"
members = [
    "src/common",
#    "src/contract-test-server",
    "src/events-gen",
    "src/metadata",
    "src/platform",
    "src/query",
    "src/service",
    "src/store",
    "src/ingester",
    "src/test_util",
    "src/ttest",
    "src/cmd",
]
