[package]
name = "api"
version = "0.1.0"
edition = "2018"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
actix-http = "3.0.0-beta.9"
actix-service = "2.0.0"
actix-utils = "3.0.0"
actix-web = "4.0.0-beta.8"
futures = "0.3.16"
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
