[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
query = { path = "../query" }
metadata = { path = "../metadata" }
platform = { path = "../platform" }
axum = { version = "0.4.3", features = ["headers"] }
tokio = { version = "1.15.0", features = ["full"] }
tower = { version = "0.4.11", features = ["util"] }
tower-http = { version = "0.2.0", features = ["add-extension"] }
