[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
events-gen = { path = "../events-gen" }
datafusion = { path = "../arrow-datafusion/datafusion/core" }
query = { path = "../query" }
metadata = { path = "../metadata" }
platform = { path = "../platform" }
axum = { version = "0.4.3", features = ["headers"] }
tokio = { version = "1.15.0", features = ["full"] }
tower = { version = "0.4.11", features = ["util"] }
tower-http = { version = "0.2.0", features = ["add-extension"] }
num_cpus = "1.13.1"
chrono = { version = "0.4.19" }
log = "0.4.17"
env_logger = "0.9.0"
bytesize = "1.1.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
thiserror = "1.0.31"