[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.133", features = ["derive"] }
lazy_static = "1.4.0"
jsonwebtoken = "7.2.0"
rand = "0.8.4"
sha3 = "0.10.0"
hex = "0.4.3"
