[package]
name = "io"
version = "0.1.0"
authors = [
	"Aleksei Lin <aleksei@incsw.in>",
]
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
common = { path = "../common" }
metadata = { path = "../metadata" }
axum = { version = "0.4.4", features = ["headers"] }
axum-debug = { version = "0.3.2" }
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
chrono = { version = "0.4.19", features = ["serde"] }
