[package]
name = "metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "6.0.0"
async-trait = "0.1.52"
rocksdb = { version = "0.17.0", features = ["multi-threaded-cf"] }
actix-web = { version = "4.0.0-beta.19", default-features = false, features = [
	"compress-brotli",
	"compress-gzip",
	"cookies",
] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
chrono = { version = "0.4.19", features = ["serde"] }
bincode = "1.3.3"
