[package]
name = "platform"
version = "0.1.0"
authors = [
	"Maxim Bogdanov <maxim.bogdanov@coins.ph>",
	"Aleksei Lin <aleksei@incsw.in>",
]
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
common = { path = "../common" }
metadata = { path = "../metadata" }
axum = { version = "0.4.3", features = ["headers"] }
tokio = { version = "1.15.0", features = ["full"] }
headers = "0.3.5"
jsonwebtoken = "7.2.0"

futures = "0.3.19"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
chrono = { version = "0.4.19", features = ["serde"] }
arrow = "5.2.0"
datafusion = "6.0.0"
async-trait = "0.1.52"
rocksdb = { version = "0.17.0", features = ["multi-threaded-cf"] }
lazy_static = "1.4.0"
rand = "0.8.4"
sha3 = "0.10.0"
hex = "0.4.3"
bincode = "1.3.3"
parking_lot = "0.11.2"
mockall = "0.11.0"

[dev-dependencies]
criterion = "0.3.5"

# [[bench]]
# name = "count"
# harness = false

#[[bench]]
#name = "dictionary"
#harness = false
