[package]
name = "platform"
version = "0.1.0"
authors = [
	"Maxim Bogdanov <maxim.bogdanov@coins.ph>",
	"Aleksei Lin <aleksei@incsw.in>",
]
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
common = { path = "../common" }
metadata = { path = "../metadata" }
axum = { version = "0.4.3", features = ["headers"] }
axum-debug = { version = "0.3.2" }
tokio = { version = "1.15.0", features = ["full"] }
jsonwebtoken = "7.2.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
rand = "0.8.4"
sha3 = "0.10.0"
hex = "0.4.3"

[dev-dependencies]
criterion = "0.3.5"

# [[bench]]
# name = "count"
# harness = false

#[[bench]]
#name = "dictionary"
#harness = false
