[package]
name = "platform"
version = "0.1.0"
authors = [
    "Maxim Bogdanov <maxim.bogdanov@coins.ph>",
    "Aleksei Lin <aleksei@incsw.in>",
]
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
url = "2.2.2"
anyhow = "1.0"
datafusion = { path = "../arrow-datafusion/datafusion" }
datafusion-expr = { path = "../arrow-datafusion/datafusion-expr" }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json"] }
common = { path = "../common" }
metadata = { path = "../metadata" }
query = { path = "../query" }
axum = { version = "0.4.3", features = ["headers"] }
axum-debug = { version = "0.3.2" }
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
chrono = { version = "0.4.19", features = ["serde"] }
arrow = { version = "9.0.0" }
rust_decimal = { version = "1.22.0", features = ["serde-with-float"] }
convert_case = "0.5.0"

[dev-dependencies]
criterion = "0.3.5"

# [[bench]]
# name = "count"
# harness = false

#[[bench]]
#name = "dictionary"
#harness = false
