[package]
name = "query"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
datafusion = "6.0.0"
arrow = { version = "6.1.0", features = ["prettyprint"] }
platform = { path = "../platform" }
store = { path = "../store" }
mockall = "0.10.1"
tokio = { version = "1.10.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
] }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
rand = "0.8.4"

[[bench]]
name = "sorted_distinct_count"
harness = false
