[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "20.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
#datafusion = "7.0.0"
datafusion = { path = "../arrow-datafusion/datafusion/core" }