[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
chrono = { version = "0.4.19", features = ["serde"] }
bincode = "1.3.3"
