[package]
name = "cmd"
version = "0.1.0"
edition = "2021"
authors = ["Optiprism <dev@optiprism.io>"]

[dependencies]
tower-cookies = "0.7.0"
common = { path = "../common" }
events-gen = { path = "../events-gen" }
datafusion = "11.0.0"
query = { path = "../query" }
metadata = { path = "../metadata" }
platform = { path = "../platform" }
axum = { version = "0.5.16", features = ["headers"] }
tokio = { version = "1.15.0", features = ["full"] }
tower = { version = "0.4.11", features = ["util"] }
tower-http = { version = "0.3.4", features = ["add-extension"] }
num_cpus = "1.13.1"
chrono = { version = "0.4.19" }
log = "0.4.17"
env_logger = "0.9.0"
bytesize = "1.1.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
thiserror = "1.0.31"
clap = { version = "4.0.15", features = ["derive"] }
arrow = { version = "20.0.0", features = ["prettyprint"] }
rust_decimal = { version = "1.22.0", features = ["serde-float"] }
csv = "1.1"
enum-iterator = "1.2.0"
rand = "0.8.0"
crossbeam-channel = "0.3.9"
strum = "0.24"
strum_macros = "0.24"
futures = "0.3.21"
serde = { version = "1.0.133", features = ["derive"] }
dateparser = "0.1.7"
parse_duration = "2.1.1"
anyhow = "1.0.65"
time = "0.1.44"
humantime = "2.1.0"

[[bin]]
name = "optiprism"
path = "src/main.rs"
