[package]
name = "metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "11.0.0"
datafusion-common = "11.0.0"
common = { path = "../common" }
async-mutex = "1.4.0"
axum = { version = "0.5.16" }
rocksdb = { version = "0.17.0", features = ["multi-threaded-cf"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
chrono = { version = "0.4.19", features = ["serde"] }
bincode = "1.3.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros", "sync"] }
anyhow = "1.0"
arrow = "20.0.0"
futures = "0.3.19"
convert_case = "0.5.0"
byteorder = "1.4.3"
thiserror = "1.0.31"