[package]
name = "platform"
version = "0.1.0"
authors = [
    "Maxim Bogdanov <maxim.bogdanov@coins.ph>",
    "Aleksei Lin <aleksei@incsw.in>",
]
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
lazy_static = "1.4.0"
time = "0.3.15"
tower-cookies = { version = "0.7.0", features = ["axum-core"] }
serde_with = "2.0.1"
password-hash = { version = "0.4.2", features = ["std"] }
tower = "0.4.13"
bytes = "1.2.1"
jsonwebtoken = "8.1.1"
rand = "0.8.4"
argon2 = "0.4.1"
url = "2.2.2"
anyhow = "1.0.65"
datafusion = "11.0.0"
datafusion-common = "11.0.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
common = { path = "../common" }
metadata = { path = "../metadata" }
query = { path = "../query" }
axum = { version = "0.5.16", features = ["headers"] }
axum-debug = { version = "0.3.2" }
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
chrono = { version = "0.4.19", features = ["serde"] }
arrow = { version = "20.0.0" }
rust_decimal = { version = "1.22.0", features = ["serde-with-float"] }
convert_case = "0.5.0"
thiserror = "1.0.31"
num-traits = "0.2.15"
hyper = "0.14.20"

[dev-dependencies]
criterion = "0.3.5"

# [[bench]]
# name = "count"
# harness = false

#[[bench]]
#name = "dictionary"
#harness = false
