[package]
name = "query"
version = "0.1.0"
edition = "2021"
authors = ["Optiprism <dev@optiprism.io>"]

[dependencies]
fnv = "1.0.3"
ahash = { version = "0.7", default-features = false }
common = { path = "../common" }
metadata = { path = "../metadata" }
chrono = "0.4"
chronoutil = "0.2.3"
datafusion = "11.0.0"
datafusion-common = "11.0.0"
datafusion-expr = "11.0.0"
object_store = "0.4.0"
arrow = { version = "20.0.0", features = ["prettyprint"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
tokio = { version = "1.15.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
] }
axum = { version = "0.5.16", features = ["headers"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
futures = "0.3.21"
thiserror = "1.0.31"
rust_decimal = { version = "1.22.0", features = ["serde-with-float"] }
rust_decimal_macros = "1.22"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
rand = "0.8.4"
