[package]
name = "cmd"
version = "0.1.0"
edition = "2021"
authors = ["Optiprism <dev@optiprism.io>"]

[dependencies]
anyhow = "1.0.66"
arrow = { version = "28.0.0", features = ["prettyprint"] }
axum = { version = "0.6.1", features = ["headers"] }
chrono = { version = "0.4.23" }
clap = { version = "4.0.29", features = ["derive"] }
common = { path = "../common" }
contract-test-server = { path = "../contract-test-server" }
crossbeam-channel = "0.5.6"
csv = "1.1"
dateparser = "0.1.7"
demo = { path = "../demo" }
enum-iterator = "1.2.0"
events-gen = { path = "../events-gen" }
futures = "0.3.25"
humantime = "2.1.0"
metadata = { path = "../metadata" }
num_cpus = "1.14.0"
parse_duration = "2.1.1"
platform = { path = "../platform" }
query = { path = "../query" }
rand = "0.8.5"
rust_decimal = { version = "1.27.0", features = ["serde-float"] }
serde = { version = "1.0.149", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.37"
time = "0.3.17"
tokio = { version = "1.23.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-cookies = "0.8.0"
tower-http = { version = "0.3.5", features = ["add-extension"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[[bin]]
name = "optiprism"
path = "src/main.rs"
