[package]
name = "cmd"
version = "0.1.11"
edition = "2021"

[profile.release]
debug = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
config = "0.13.4"
anyhow = "1.0.66"
arrow = { version = "49.0.0", features = ["prettyprint"] }
bytesize = "1.1.0"
chrono = { version = "0.4.23" }
clap = { version = "4.0.29", features = ["derive"] }
common = { path = "../common" }
crossbeam-channel = "0.5.6"
scan_dir = "0.3.3"
csv = "1.1"
#datafusion = "34.0.0"
datafusion = { path = "../../../arrow-datafusion/datafusion/core" }
dateparser = "0.2.0"
enum-iterator = "1.2.0"
events-gen = { path = "../events-gen" }
futures = "0.3.25"
humantime = "2.1.0"
indicatif = "0.17.2"
metadata = { path = "../metadata" }
axum = { version = "0.6.1", features = ["headers"] }
axum-core = "0.3.0"
ingester = { path = "../ingester" }
num_cpus = "1.14.0"
parse_duration = "2.1.1"
maxminddb = "0.23.0"
uaparser = "0.6.1"
platform = { path = "../platform" }
query = { path = "../query" }
storage = { path = "../storage" }
rand = "0.8.5"
rust_decimal = { version = "1.27.0", features = ["serde-float"] }
serde = { version = "1.0.149", features = ["derive"] }
service = { path = "../service" }
strum = "0.24"
strum_macros = "0.24"
test_util = { path = "../test_util" }
thiserror = "1.0.37"
time = "0.3.17"
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
hyper = "0.14.27"
tracing-subscriber = "0.3.17"
metrics-exporter-prometheus="0.13.0"
metrics-util = "0.16.0"
metrics = "0.22.0"
serde_derive = "1.0.189"