[package]
name = "cmd"
version = "0.7.4"
edition = "2021"

[profile.release]
debug = true

[dependencies]
config = "0.14.0"
anyhow = "1.0.66"
arrow = { version = "52.0.0", features = ["prettyprint"] }
bytesize = "1.1.0"
chrono = { version = "0.4.23" }
clap = { version = "4.5.0", features = ["derive"] }
common = { path = "../common" }
crossbeam-channel = "0.5.6"
scan_dir = "0.3.3"
csv = "1.1"
datafusion = {  version = "39.0.0" }
dateparser = "0.2.0"
enum-iterator = "2.1.0"
events-gen = { path = "../events-gen" }
futures = "0.3.25"
humantime = "2.1.0"
indicatif = "0.17.6"
metadata = { path = "../metadata" }
axum = { version = "0.7.4" }
axum-core = "0.4.3"
ingester = { path = "../ingester" }
num_cpus = "1.14.0"
parse_duration = "2.1.1"
maxminddb = "0.24.0"
uaparser = "0.6.1"
platform = { path = "../platform" }
query = { path = "../query" }
storage = { path = "../storage" }
rand = "0.8.5"
rust_decimal = { version = "1.27.0", features = ["serde-float"] }
serde = { version = "1.0.149", features = ["derive"] }
strum = "0.24"
strum_macros = "0.26.4"
thiserror = "1.0.37"
time = "0.3.36"
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
hyper = "1.4.1"
tracing-subscriber = "0.3.17"
metrics-exporter-prometheus = { version = "0.15.3",features = ["http-listener"] }
metrics-util = "0.17.0"
metrics = "0.23.0"
serde_derive = "1.0.189"
hex = "0.4.3"
arrow2 = { git = "ssh://git@github.com/optiprism-io/arrow2.git", features = ["compute_cast", "io_print", "io_parquet", "io_csv", "io_json", "compute_arithmetics", "compute_merge_sort", "compute_sort", "compute_concatenate", "serde_types"] }
tokio-cron-scheduler = "*"
flate2 = "1.0.31"
cryptostream = "0.3.2"
openssl = "0.10.66"
croner = "2.0.5"
base64 = "0.22.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
object_store = { version = "0.11.0",features = ["gcp","aws"]}
quick-xml = { version = "0.36.1" }
zip = "2.1.6"

[build-dependencies]
vergen = "9.0.0"