[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["Optiprism <dev@optiprism.io>"]

[dependencies]
arrow2 = { git = "ssh://git@github.com/optiprism-io/arrow2.git" }
arrow = { version = "52.0.0" }
arrow-schema = { version = "52.0.0", features = ["serde"] }
async-trait = "0.1.59"
chrono = { version = "0.4.23", features = ["serde"] }
chronoutil = "0.2.3"
http-body-util = "0.1.0"
datafusion = {  version = "39.0.0" }
datafusion-common = {  version = "39.0.0" }
datafusion-expr = {  version = "39.0.0" }
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_with = "3.0.0"
thiserror = "1.0.37"
axum = { version = "0.7.4" }
axum-extra = { version = "0.9.2" }
log = "0.4.20"
axum-core = "0.4.3"
regex = "1"
tracing = "0.1.37"
hyper = "1.1.0"
bytes = "1.4.0"
