[package]
name = "contract-test-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
arrow = { version = "28.0.0" }
async-trait = "0.1.59"
chrono = { version = "0.4.23" }
common = { path = "../common" }
datafusion = "15.0.0"
lazy_static = "1.4.0"
metadata = { path = "../metadata" }
platform = { path = "../platform" }
service = { path = "../service" }
clap = { version = "4.0.29", features = ["derive"] }
serde_json = "1.0.89"
tracing = "0.1.37"
tokio = { version = "1.23.0", features = ["full"] }