[package]
name = "contract-test-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
arrow = { version = "38.0.0" }
async-trait = "0.1.59"
chrono = { version = "0.4.23" }
clap = { version = "4.0.29", features = ["derive"] }
common = { path = "../common" }
datafusion = "24.0.0"
lazy_static = "1.4.0"
metadata = { path = "../metadata" }
platform = { path = "../platform" }
serde_json = "1.0.89"
service = { path = "../service" }
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
