[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
arrow = { version = "20.0.0", features = ["prettyprint"] }
bytesize = "1.1.0"
chrono = { version = "0.4.19" }
common = { path = "../common" }
crossbeam-channel = "0.3.9"
csv = "1.1"
datafusion = "11.0.0"
enum-iterator = "1.2.0"
events-gen = { path = "../events-gen" }
futures = "0.3.21"
humantime = "2.1.0"
metadata = { path = "../metadata" }
num_cpus = "1.13.1"
parse_duration = "2.1.1"
platform = { path = "../platform" }
query = { path = "../query" }
rand = "0.8.0"
rust_decimal = { version = "1.22.0", features = ["serde-float"] }
serde = { version = "1.0.133", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.31"
time = "0.1.44"
tracing = "0.1.37"
