[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
arrow = { version = "28.0.0", features = ["prettyprint"] }
bytesize = "1.1.0"
chrono = { version = "0.4.23" }
common = { path = "../common" }
crossbeam-channel = "0.5.6"
csv = "1.1"
datafusion = "15.0.0"
enum-iterator = "1.2.0"
events-gen = { path = "../events-gen" }
futures = "0.3.25"
humantime = "2.1.0"
metadata = { path = "../metadata" }
num_cpus = "1.14.0"
parse_duration = "2.1.1"
platform = { path = "../platform" }
service = { path = "../service" }
query = { path = "../query" }
rand = "0.8.5"
rust_decimal = { version = "1.27.0", features = ["serde-float"] }
serde = { version = "1.0.149", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.37"
time = "0.3.17"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1.23.0", features = ["full"] }
clap = { version = "4.0.29", features = ["derive"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
dateparser = "0.1.7"
