[package]
name = "events-gen"
version = "0.1.0"
edition = "2021"
authors = ["Optiprism <dev@optiprism.io>"]

[dependencies]
arrow = { version = "28.0.0", features = ["prettyprint"] }
chrono = { version = "0.4.23" }
common = { path = "../common" }
csv = "1.1"
cubic_spline = "1.0.0"
futures = "0.3.25"
indicatif = "0.17.2"
lazy_static = "1.4.0"
metadata = { path = "../metadata" }
rand = "0.8.5"
serde = { version = "1.0.149", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
