[package]
name = "metadata"
version = "0.1.0"
edition = "2021"
authors = ["Optiprism <dev@optiprism.io>"]

[dependencies]
arrow = "28.0.0"
async-trait = "0.1.59"
bincode = "1.3.3"
byteorder = "1.4.3"
chrono = { version = "0.4.23", features = ["serde"] }
chronoutil = "0.2.3"
common = { path = "../common" }
convert_case = "0.6.0"
datafusion = "15.0.0"
datafusion-common = "15.0.0"
futures = "0.3.25"
lazy_static = "1.4.0"
rocksdb = { version = "0.19.0", features = ["multi-threaded-cf"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "sync"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
