[package]
name = "metadata"
version = "0.1.0"
edition = "2021"
authors = ["Optiprism <dev@optiprism.io>"]

[dependencies]
rand = { version = "0.8.5", features = [] }
arrow = { version = "52.0.0" }
async-trait = "0.1.59"
bincode = "1.3.3"
byteorder = "1.4.3"
chrono = { version = "0.4.23", features = ["serde"] }
chronoutil = "0.2.3"
common = { path = "../common" }
storage = { path = "../storage" }
convert_case = "0.6.0"
lru = "0.12.1"
datafusion = {  git = "ssh://git@github.com/optiprism-io/datafusion.git" }
datafusion-common = {  git = "ssh://git@github.com/optiprism-io/datafusion.git" }
futures = "0.3.25"
lazy_static = "1.4.0"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", rev = "1cf906dc4087f06631820f13855e6b27bd21b972" ,features = ["multi-threaded-cf"]}
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "sync"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
anyhow = "1.0.75"
serde_with = { version = "3.3.0", features = ["macros"] }
